Adding React Server Side Rendering.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/dist/build/style.css')
+    link(rel='stylesheet', href='/build/style.css')
   body
+    link(rel='javascript', href='/build/js.js')
     block content
