Removed html. Rendering done through Jade now.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,4 +7,4 @@ html
     #app!=html
       script.
         __DATA__= !{data}
-      script(type='javascript', src='/js.js')
+      script(src='/js.js')
