Added client and server side route error handling. Refactored SSR and client rendering. Removed rehydration for now.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,4 @@ html
     title= title
     link(rel='stylesheet', href='/style.css')
   body
-    #app!=html
-      script.
-        __DATA__= !{data}
-      script(src='/js.js')
+    block content
