Revamped .eslintrc. Now using AirBnb style guide. Started migration to ES6. Added flash messages to passport functions.

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,9 @@ extends layout
 
 block content
     #content
+        - if(message !== 'undefined')
+            p #{message.error}
+            p #{message.success}
         #app!=html
         script.
             __DATA__ = !{data}
