Added more styling to elements. Need to rethink if Radium is the correct way forward.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,5 +2,10 @@ doctype html
 html
   head
     title= title
+  style.
+    * {
+        margin: 0;
+        padding: 0;
+    }
   body
     block content
