Added stylesheets and classnames to components.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,10 +2,6 @@ doctype html
 html
   head
     title= title
-  style.
-    * {
-        margin: 0;
-        padding: 0;
-    }
+    link(rel='stylesheet', href='/style.css')
   body
     block content
