Added JS and CSS links. Started adding classnames.

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,3 +9,4 @@ block content
         script.
             __DATA__ = !{data}
     script(src='/js.js')
+    script(src='https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js')
