--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/style.css')
     link(rel='stylesheet', href='https://storage.googleapis.com/code.getmdl.io/1.0.0/material.pink-green.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
   body
